[tool.poetry]
name = "csa-erp-client"
version = "0.1.0"
description = "A simple python client to access CSA ERP via ERPNext API"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.32.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
